# BBAW-Census-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
census_api/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: test_census_api.py
