[tool.poetry]
name = "census_api"
version = "0.1.1"
description = "RESTful API for the Census DB. See also www.census.de"
authors = ["opohl <opohl@bbaw.de>"]
license = ""

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.42.0"
uvicorn = "^0.9.0"
requests = "^2.22"
sqlalchemy = "^1.3"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
